Allow the uplaod release to skip the creation of a dev release
Signed-off-by: Andrew Poydence <apoydence@pivotal.io>

--- a/tasks/upload-release/task.yml
+++ b/tasks/upload-release/task.yml
@@ -31,3 +31,7 @@ params:
   # - Optional
   # - Do not rebase the release after upload
   NO_REBASE: false
+
+  # - Optional
+  # - Create a dev release before uploading
+  CREATE_RELEASE: true
