Add em-eventsource rubygem to blackbox image
Signed-off-by: Johannes Tuchscherer <jtuchscherer@pivotal.io>

--- a/docker-images/blackbox/Dockerfile
+++ b/docker-images/blackbox/Dockerfile
@@ -1,5 +1,6 @@
 FROM ruby:latest
 
 RUN gem install dogapi
+RUN gem install em-eventsource
 RUN curl -L "https://cli.run.pivotal.io/stable?release=debian64&source=github" > cf.deb && dpkg -i ./cf.deb
 RUN apt-get -y update && apt-get -y upgrade && apt-get -y install jq
