--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -69,7 +69,7 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/cf-deployment
-    tag_filter: v2.9.0
+    branch: loggregator-iso-segments
     private_key: {{loggregator-key}}
 
 - name: deployments-loggregator
@@ -822,7 +822,7 @@ jobs:
         bosh-release-dir: loggregator-agent-release
       params:
         BBL_STATE_DIR: gcp/coconut-bbl
-    - task: upload-cf-drain-release
+    - task: upload-cf-syslog-drain-release
       file: loggregator-ci/tasks/upload-release/task.yml
       input_mapping:
         bosh-release-dir: cf-syslog-drain-release
@@ -851,12 +851,11 @@ jobs:
           set -e
 
           cp cf-deployment/operations/scale-to-one-az.yml ops-files/
-          cp cf-deployment/operations/experimental/use-log-cache.yml ops-files/
-          cp cf-deployment/operations/experimental/use-bosh-dns.yml ops-files/
-          cp cf-deployment/operations/experimental/use-bosh-dns-for-containers.yml ops-files/
           cp cf-deployment/operations/use-compiled-releases.yml ops-files/
           cp cf-deployment/operations/test/add-persistent-isolation-segment-router.yml ops-files/
           cp cf-deployment/operations/test/add-persistent-isolation-segment-diego-cell.yml ops-files/
+          cp cf-deployment/operations/test/add-persistent-isolation-segment-loggregator.yml ops-files/
+          cp cf-deployment/operations/test/add-persistent-isolation-segment-syslog-drain.yml ops-files/
           cp bbl-state/gcp/coconut-bbl/ops-files/*.yml ops-files/
           cp loggregator-agent-release/manifests/operations/infrastructure-metrics.yml ops-files/infrastructure-metrics.yml
           cp loggregator-release/manifests/operations/add-rlp-gateway-to-cf.yml ops-files/add-rlp-gateway.yml
@@ -914,14 +913,13 @@ jobs:
         clients.yml
         scale-to-one-az.yml
         use-compiled-releases.yml
-        use-log-cache.yml
-        add-persistent-isolation-segment-router.yml
-        add-persistent-isolation-segment-diego-cell.yml
         on-the-fly.yml
-        use-bosh-dns.yml
-        use-bosh-dns-for-containers.yml
         infrastructure-metrics.yml
         add-rlp-gateway.yml
+        add-persistent-isolation-segment-router.yml
+        add-persistent-isolation-segment-diego-cell.yml
+        add-persistent-isolation-segment-loggregator.yml
+        add-persistent-isolation-segment-syslog-drain.yml
   - put: deployments-loggregator
     params:
       repository: updated-vars-store
