add client auth
[#160360680]

--- a/tasks/cf-blackbox/task.yml
+++ b/tasks/cf-blackbox/task.yml
@@ -12,5 +12,6 @@ params:
   CYCLES: 10000
   DELAY: 20
   DELAY_UNIT: ms
+  USE_CLIENT_AUTH: false
 run:
   path: loggregator-ci/tasks/cf-blackbox/task
