--- a/tasks/staging/firehose-reliability-test.yml
+++ b/tasks/staging/firehose-reliability-test.yml
@@ -10,5 +10,11 @@ inputs:
 params:
   WORKER_INSTANCE_COUNT: 1
   APP_WS_PORT: 443
+  CF_API:
+  USERNAME:
+  PASSWORD:
+  SPACE:
+  ORG:
+  USE_CLIENT_AUTH: false
 run:
   path: loggregator-ci/tasks/scripts/firehose-reliability-test.py
