--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -368,108 +368,108 @@ jobs:
       source-repo: noisy-neighbor-nozzle
     params:
       IMPORT_PATH: code.cloudfoundry.org/noisy-neighbor-nozzle
-
-- name: noisy-neighbor-nozzle-promotion
-  serial: true
-  plan:
-  - get: 5m
-    trigger: true
-  - aggregate:
-    - get: noisy-neighbor-nozzle
-      passed: ["noisy-neighbor-nozzle-tests"]
-      trigger: true
-    - get: noisy-neighbor-nozzle-master
-    - get: bumper-tool
-    - get: loggregator-ci
-  - task: bumper
-    file: loggregator-ci/tasks/bumper/task.yml
-    input_mapping:
-      source: noisy-neighbor-nozzle
-      dest: noisy-neighbor-nozzle-master
-    params:
-      SOURCE_BRANCH: develop
-      DEST_BRANCH: master
-  - put: noisy-neighbor-nozzle-master
-    params:
-      repository: merged-dest
-
-- name: noisy-neighbor-nozzle-bump-submodule
-  serial: true
-  plan:
-  - aggregate:
-    - get: loggregator-ci
-    - get: noisy-neighbor-nozzle-release
-      trigger: true
-    - get: noisy-neighbor-nozzle-master
-      trigger: true
-      passed: ["noisy-neighbor-nozzle-promotion"]
-  - task: update-submodule
-    file: loggregator-ci/tasks/bump-submodule/task.yml
-    input_mapping:
-      release-repo: noisy-neighbor-nozzle-release
-      source-repo: noisy-neighbor-nozzle-master
-    output_mapping:
-      bumped-release-repo: bumped-noisy-neighbor-nozzle-release
-    params:
-      SUBMODULE_PATH: src/code.cloudfoundry.org/noisy-neighbor-nozzle
-  - task: sync-package-specs
-    file: loggregator-ci/tasks/run-release-script/task.yml
-    input_mapping:
-      release-repo: bumped-noisy-neighbor-nozzle-release
-    output_mapping:
-      updated-release-repo: synced-noisy-neighbor-nozzle-release
-    params:
-      SCRIPT: scripts/sync-package-specs
-  - task: run-tests
-    file: loggregator-ci/tasks/run-release-script/task.yml
-    input_mapping:
-      release-repo: synced-noisy-neighbor-nozzle-release
-    params:
-      SCRIPT: scripts/test
-  - task: commit
-    file: loggregator-ci/tasks/commit-with-shortlog/task.yml
-    input_mapping:
-      release-repo: synced-noisy-neighbor-nozzle-release
-    output_mapping:
-      committed-repo: committed-noisy-neighbor-nozzle-release
-    params:
-      PATHS: "src/code.cloudfoundry.org/noisy-neighbor-nozzle packages"
-  - put: noisy-neighbor-nozzle-release
-    params:
-      repository: committed-noisy-neighbor-nozzle-release
-      rebase: true
-
 - name: noisy-neighbor-nozzle-deploy
   serial: true
-  public: false
   plan:
   - aggregate:
-    - get: noisy-neighbor-nozzle-release
+    - get: noisy-neighbor-nozzle
+      passed: [noisy-neighbor-nozzle-tests]
       trigger: true
-      passed: ["noisy-neighbor-nozzle-bump-submodule"]
-    - get: deployments-loggregator
     - get: loggregator-ci
-  - task: upload-noisy-neighbor-nozzle-release
-    file: loggregator-ci/tasks/upload-release/task.yml
-    input_mapping:
-      bbl-state: deployments-loggregator
-      bosh-release-dir: noisy-neighbor-nozzle-release
-    params:
-      BBL_STATE_DIR: gcp/coconut-bbl
-  - task: deploy
-    file: loggregator-ci/tasks/bosh-deploy/task.yml
-    input_mapping:
-      bbl-state: deployments-loggregator
-      vars-store: deployments-loggregator
-      ops-files: deployments-loggregator
-      vars-files: deployments-loggregator
-      bosh-release: noisy-neighbor-nozzle-release
-    params:
-      BBL_STATE_DIR: gcp/coconut-bbl
-      DEPLOYMENT_NAME: noisy-neighbor-nozzle
-      MANIFEST_FILE: manifests/noisy-neighbor-nozzle.yml
-      VARS_STORE_FILE: gcp/coconut-bbl/throw-away.yml # We do not want to save this vars store.
-      VARS_FILES: "gcp/coconut-bbl/noisy-neighbor-nozzle-vars.yml"
+  - task: deploy-to-prod
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+          repository: loggregator/base
+      inputs:
+      - name: noisy-neighbor-nozzle
+      params:
+        SYSTEM_DOMAIN: "coconut.cf-app.com"
+        ORG: "cf-lamb"
+        SPACE: "production"
+        CLIENT_ID: {{noisy-neighbor-nozzle-id}}
+        CLIENT_SECRET: {{noisy-neighbor-nozzle-secret}}
+        SUBSCRIPTION_ID: {{noisy-neighbor-nozzle-subscription-id}}
+        USERNAME: {{coconut-username}}
+        PASSWORD: {{coconut-password}}
+        DATADOG_API_KEY: {{datadog-prod-api-key}}
+        NOZZLE_COUNT: 4
+      run:
+        path: bash
+        args:
+        - -c
+        - |
+          #!/bin/bash
+          set -e
+
+          mkdir -p $GOPATH/src/code.cloudfoundry.org/
+          cp -r noisy-neighbor-nozzle/ $GOPATH/src/code.cloudfoundry.org/noisy-neighbor-nozzle
+          go get code.cloudfoundry.org/noisy-neighbor-nozzle/...
+
+          go install code.cloudfoundry.org/noisy-neighbor-nozzle/cmd/nozzle
+          go install code.cloudfoundry.org/noisy-neighbor-nozzle/cmd/accumulator
+          go install code.cloudfoundry.org/noisy-neighbor-nozzle/cmd/datadog-reporter
+
+          cf login -a "api.$SYSTEM_DOMAIN" -u "$USERNAME" -p "$PASSWORD" -o "$ORG" -s "$SPACE"
+
+          V2=$(cf curl /v2/info)
+          UAA_ADDR=$(echo $V2 | jq .token_endpoint --raw-output)
+          LOGGR_ADDR=$(echo $V2 | jq .doppler_logging_endpoint --raw-output)
+          CAPI_ADDR="https://api.$SYSTEM_DOMAIN"
+
+          cf push nn-nozzle \
+            -p "$GOPATH/bin/" \
+            -b binary_buildpack \
+            -c "./nozzle" \
+            -i "$NOZZLE_COUNT" \
+            -m 256M \
+            -k 256M \
+            --no-start
+          cf push nn-accumulator \
+            -p "$GOPATH/bin/" \
+            -b binary_buildpack \
+            -c "./accumulator" \
+            -m 256M \
+            -k 256M \
+            --no-start
+          cf push nn-datadog-reporter \
+            -p "$GOPATH/bin/" \
+            -b binary_buildpack \
+            -c "./datadog-reporter" \
+            -m 256M \
+            -k 256M \
+            -u none \
+            --no-start
+
+          # Set env for nozzle
+          cf set-env nn-nozzle UAA_ADDR $UAA_ADDR
+          cf set-env nn-nozzle CLIENT_ID $CLIENT_ID
+          cf set-env nn-nozzle CLIENT_SECRET $CLIENT_SECRET
+          cf set-env nn-nozzle LOGGREGATOR_ADDR $LOGGR_ADDR
+          cf set-env nn-nozzle SUBSCRIPTION_ID $SUBSCRIPTION_ID
+
+          # Set env for accumulator
+          cf set-env nn-accumulator UAA_ADDR $UAA_ADDR
+          cf set-env nn-accumulator CLIENT_ID $CLIENT_ID
+          cf set-env nn-accumulator CLIENT_SECRET $CLIENT_SECRET
+          cf set-env nn-accumulator NOZZLE_ADDRS https://nn-nozzle.cfapps.io
+          cf set-env nn-accumulator NOZZLE_COUNT $NOZZLE_COUNT
+          cf set-env nn-accumulator NOZZLE_APP_GUID $(cf app nn-nozzle --guid)
+
+          # Set env for datadog reporter
+          cf set-env nn-datadog-reporter UAA_ADDR $UAA_ADDR
+          cf set-env nn-datadog-reporter CAPI_ADDR $CAPI_ADDR
+          cf set-env nn-datadog-reporter ACCUMULATOR_ADDR https://nn-accumulator.cfapps.io
+          cf set-env nn-datadog-reporter CLIENT_ID $CLIENT_ID
+          cf set-env nn-datadog-reporter CLIENT_SECRET $CLIENT_SECRET
+          cf set-env nn-datadog-reporter DATADOG_API_KEY $DATADOG_API_KEY
+          cf set-env nn-datadog-reporter REPORTER_HOST $SYSTEM_DOMAIN
+
+          cf start nn-nozzle
+          cf start nn-accumulator
+          cf start nn-datadog-reporter
 
 ###############################################################################
 # SERVICE METRICS INJECTOR
