--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -882,6 +882,7 @@ jobs:
             cp cf-deployment/operations/use-compiled-releases.yml ops-files/
             cp cf-deployment/operations/scale-to-one-az.yml ops-files/
             cp loggregator-agent-release/manifests/operations/infrastructure-metrics.yml ops-files/infrastructure-metrics.yml
+            cp loggregator-agent-release/manifests/operations/cf-add-syslog-agent.yml ops-files/cf-add-syslog-agent.yml
             cp cf-deployment/operations/test/add-persistent-isolation-segment-infrastructure-metrics.yml ops-files/
             cp cf-deployment/operations/test/add-persistent-isolation-segment-diego-cell.yml ops-files/
             cp cf-deployment/operations/test/add-persistent-isolation-segment-logging-system.yml ops-files/
@@ -917,6 +918,7 @@ jobs:
           use-compiled-releases.yml
           scale-to-one-az.yml
           on-the-fly.yml
+          cf-add-syslog-agent.yml
           infrastructure-metrics.yml
           add-persistent-isolation-segment-diego-cell.yml
           add-persistent-isolation-segment-logging-system.yml
