--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -881,9 +881,10 @@ jobs:
 
             cp cf-deployment/operations/use-compiled-releases.yml ops-files/
             cp cf-deployment/operations/scale-to-one-az.yml ops-files/
-            cp loggregator-agent-release/manifests/operations/infrastructure-metrics.yml ops-files/infrastructure-metrics.yml
-            cp loggregator-agent-release/manifests/operations/cf-deployment-addon.yml ops-files/cf-deployment-addon.yml
-            cp loggregator-agent-release/manifests/operations/cf-add-forwarder-agent.yml ops-files/cf-add-forwarder-agent.yml
+            cp loggregator-agent-release/manifests/operations/infrastructure-metrics.yml ops-files/
+            cp loggregator-agent-release/manifests/operations/cf-add-forwarder-agent.yml ops-files/
+            cp loggregator-agent-release/manifests/operations/cf-forwarder-agent-skip-cert-verify.yml ops-files/
+            cp loggregator-agent-release/manifests/operations/cf-deployment-addon.yml ops-files/
 
             cat <<EOT >> ops-files/on-the-fly.yml
             - type: replace
@@ -918,6 +919,7 @@ jobs:
           on-the-fly.yml
           cf-deployment-addon.yml
           cf-add-forwarder-agent.yml
+          cf-forwarder-agent-skip-cert-verify.yml
           infrastructure-metrics.yml
     - task: enable-feature-flags
       file: cf-deployment-concourse-tasks/set-feature-flags/task.yml
@@ -983,5 +985,3 @@ jobs:
         CF_ADMIN_PASSWORD: {{ten-password}}
         CF_DOMAIN: ten.loggr.cf-app.com
         SKIP_SSL_VALIDATION: true
-
-
